# alze-engine

./: .context.md  .gitignore  CLAUDE.md  CMakeLists.txt  ERRORES.md  PHYSICS_DEEP_REPORT.md  PROGRESS.md  README.md  build12.txt  build2.txt  build3.txt  build4.txt  build5.txt  build6.txt  build8.txt  build_err.txt  test_out.txt  test_out10.txt  test_out2.txt  test_out4.txt  test_out5.txt  test_out8.txt  test_out9.txt
.claude/worktrees/condescending-albattani/.claude/: settings.local.json
.claude/worktrees/distracted-bell/.claude/: settings.local.json
.claude/worktrees/exciting-germain/.claude/: CLAUDE.md  settings.local.json
.claude/worktrees/intelligent-mccarthy/.claude/: settings.local.json
.claude/worktrees/intelligent-mccarthy/MERR-main/MERR-main/: ANALISIS_PROFUNDO.md
.github/workflows/: ci.yml
assets/shaders/: depth.vert  flat2d.frag  flat2d.vert  pbr.frag  pbr.vert  unlit3d.frag  unlit3d.vert
repo_docs/: ANALISIS_PROFUNDO.md  CLAUDE.md  ERRORES.md  PROGRESS.md  README.md
research/: _MASTER_SINTESIS.md  _errors_r1.md  _r3_r4_r5_plan.md  _sintesis_r1.md  _sintesis_r2.md  _sintesis_r3.md  _sintesis_r4.md  _sintesis_r5.md
research/deep_2026_04_22/: cross_cutting_patterns.md  graphics_engine_construction.md  hardware_apis_future.md  physics_engine_construction.md  physics_future.md  rendering_future.md
research/r1/: aaa_engines.md  ecs_engines.md  physics_3d_industry.md  physics_specialized.md  rendering_libs.md  ue5.md  unity_godot.md
research/r2/: fox_engine_kojima.md  glacier_dunia_misc.md  iw_slipspace_fps.md  rage_rockstar.md  re_engine_capcom.md  redengine_cdpr.md  snowdrop_ubisoft.md
research/r3/: frame_graph_bindless.md  lumen.md  mesh_shaders_work_graphs.md  nanite.md  neural_rendering.md  ray_tracing_2024_2026.md  virtual_textures_streaming.md
research/r4/: anvil_ubisoft.md  decima.md  fromsoftware.md  id_tech_7_8.md  insomniac.md  naughty_dog.md  santa_monica.md
research/r5/: animation.md  audio.md  dcc_asset_pipeline.md  editor_architecture.md  job_systems.md  memory_allocators.md  networking.md
src/: benchmark.cpp  demo_3d.cpp  main.cpp
src/ai/: NavMesh.cpp  NavMesh.h
src/core/: AudioEngine.cpp  AudioEngine.h  AudioSystem.h  CMakeLists.txt  Camera2D.h  DebugDraw.h  DebugDraw3D.h  Engine.cpp  Engine.h  EventBus.h  FrameAllocator.h  FrameLogger.h  GraphicsContext.h  InputManager.cpp  InputManager.h  InputRecorder.h  JobSystem.h  Logger.h  ObjectPool.h  ProceduralAudio.cpp  ProceduralAudio.h  Profiler.h  RenderBackend.h  RenderCommand.h  ResourceManager.h  SceneSerializer.h  Serializer.h  SoundGenerator.h  StateManager.h  Timer.h  UISystem.h  Window.cpp  Window.h
src/ecs/: CMakeLists.txt  ComponentStorage.h  Components.h  Components3D.h  ECSCoordinator.h  EntityManager.h  QueryCache.h  SystemManager.h
src/ecs/systems/: CollisionSystem.cpp  CollisionSystem.h  InputSystem.h  Physics3DSystem.cpp  Physics3DSystem.h  PhysicsSystem.h  Render3DSystem.h  RenderSystem.cpp  RenderSystem.h
src/editor/: CMakeLists.txt  Editor.cpp  Editor.h
src/game/: BenchmarkScene3D.cpp  BenchmarkScene3D.h  ParticleSystem3D.h  Particles.h  PauseState.h  Play3DState.cpp  Play3DState.h  PlayState.cpp  PlayState.h  SceneSetup3D.h  SharedWorldState.h  WorldScene3D.cpp  WorldScene3D.h
src/math/: AABB.cpp  AABB.h  CMakeLists.txt  Color.h  MathConstants.h  MathUtils.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  SimdConfig.h  Transform2D.h  Transform3D.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
src/physics/: AdvancedFriction.h  CCDSystem.h  CMakeLists.txt  Chemistry.h  Collider3D.cpp  Collider3D.h  CollisionSolver3D.cpp  CollisionSolver3D.h  CompressibleFlow.h  Constraints3D.cpp  Constraints3D.h  ContactCache.h  CrossSystemCoupling.h  DynamicBVH3D.cpp  DynamicBVH3D.h  Electromagnetism.h  FluidSystem.h  FractureSystem.h  GJK.cpp  GJK.h  GJK.inl  GravityNBody.h  Hyperelasticity.h  MHDSystem.h  MolecularDynamics.h  NuclearPhysics.h  OpticsSystem.h  Physics2D.h  PhysicsConfig.h  PhysicsMaterial.h  PhysicsMath.h  PhysicsSoA.cpp  PhysicsSoA.h  PhysicsWorld3D.cpp  PhysicsWorld3D.h  QuantumSystem.h  Raycast.h  Relativity.h  RigidBody3D.cpp  RigidBody3D.h  (+6 more)
src/renderer/: CMakeLists.txt  DecalRenderer.cpp  DecalRenderer.h  DeferredRenderer.cpp  DeferredRenderer.h  EnvironmentMap.cpp  EnvironmentMap.h  ForwardRenderer.cpp  ForwardRenderer.h  GLRenderBackend.h  ImageDecoder.cpp  ImageDecoder.h  InstancedRenderer.cpp  InstancedRenderer.h  LODSystem.h  Material.cpp  Material.h  Mesh.h  MeshPrimitives.h  ModelLoader.cpp  ModelLoader.h  PostProcess.cpp  PostProcess.h  ProceduralTexture.h  ProceduralTextures.cpp  ProceduralTextures.h  SSAO.cpp  SSAO.h  ScreenEffects.cpp  ScreenEffects.h  ShaderLibrary.h  ShaderLoader.h  ShaderProgram.h  ShadowMap.h  ShapeRenderer2D.h  SkeletalAnimation.cpp  SkeletalAnimation.h  Skybox.h  SpriteAnimation.h  SpriteBatch2D.cpp  (+7 more)
src/renderer/glad/include/glad/: gl.h
src/scene/: Camera3D.h  FPSController.h  SceneGraph.h  SceneNode.h
tests/: test_core.cpp  test_deep_physics.cpp  test_ecs.cpp  test_math.cpp  test_math3d.cpp  test_memory.cpp  test_navmesh.cpp  test_phase25.cpp  test_phase3.cpp  test_physics.cpp  test_physics3d.cpp  test_physics_bench.cpp  test_skeletal.cpp  test_stress.cpp  test_subsystems.cpp  test_utils.cpp
